Fix Windows caption button spacing in RTL languages.

We increase the caption button size and inset the painting slightly to
give visual space between them without creating an unclickable dead
pixel. But the bounds inset operation always insets the same side
regardless of language direction, so this patch changes which button is
"last" to avoid the gaps being on the wrong side.

Bug: 857007
Change-Id: Ibec7863264cf8efa6cc4ede822a1ae36963c7e93
Reviewed-on: https://chromium-review.googlesource.com/1117742
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570983}
Former-commit-id: 196fad80c3a3e9209b5be79b8ed349b3cf7c625b